# BCML

./: CMakeLists.txt  Makefile  init_bchal_structure.sh
src/include/: bcml_config.h  bcml_log.h  bcml_types.h
src/lib/: bcml_log.c
src/lib/core/: bcml_config.c
src/lib/dataconvert/: export_wireless_json.c  export_wireless_json.h  parse_wireless_json.c  parse_wireless_json.h
src/lib/sb/: sb_ops.c  sb_ops.h
src/lib/sb/restapi/: rest_client.c  rest_client.h  sb_ops_restapi.c  sb_ops_restapi.h
src/lib/sb/uci/: sb_ops_uci.c
src/lib/validator/: validator_wireless.c  validator_wireless.h
src/schema/: wireless_data_model_schema.json
